WanaLyzer/out/numpy/typing/tests/data/fail/char.pyi
import numpy as np
import numpy.typing as npt

AR_U: npt.NDArray[np.str_]
AR_S: npt.NDArray[np.bytes_]
